--- a/QuestManager.App/QuestMasterView.xaml
+++ b/QuestManager.App/QuestMasterView.xaml
@@ -4,9 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:Design="clr-namespace:QuestManager.App.Design"
-             xmlns:Data="clr-namespace:QuestManager.Data;assembly=QuestManager.Data" x:Class="QuestManager.App.QuestsView" 
+             xmlns:Data="clr-namespace:QuestManager.Data;assembly=QuestManager.Data" x:Class="QuestManager.App.QuestMasterView" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300" Loaded="UserControl_Loaded" d:DataContext="{d:DesignInstance Type=Design:QuestsDesignInstance, IsDesignTimeCreatable=True}">
+             d:DesignHeight="300" d:DesignWidth="300" Loaded="UserControl_Loaded" d:DataContext="{d:DesignInstance Type=Design:QuestMasterDesignInstance, IsDesignTimeCreatable=True}">
     <!--<UserControl.Resources>
         <CollectionViewSource x:Key="questViewSource" d:DesignSource="{d:DesignInstance {x:Type Data:Quest}, CreateList=True}"/>
         <CollectionViewSource x:Key="questObjectivesViewSource" Source="{Binding Objectives, Source={StaticResource questViewSource}}"/>
