--- a/QuestManager.App/App.xaml
+++ b/QuestManager.App/App.xaml
@@ -1,19 +1,5 @@
-﻿<Application
+﻿<Application x:Class="QuestManager.App.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:QuestManager.App"
-             xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="QuestManager.App.App"
              StartupUri="MainWindow.xaml">
-    <Application.Resources>
-
-        <ObjectDataProvider  
-        x:Key="stringResource" 
-        ObjectInstance="{x:Static local:App.ResourceManager}" 
-        MethodName="GetString">
-            <ObjectDataProvider.MethodParameters>
-                <System:String>MyStringResource</System:String>
-            </ObjectDataProvider.MethodParameters>
-        </ObjectDataProvider>
-    </Application.Resources>
-    
 </Application>
